# cputemp

./: Makefile  Makefile.am  README.md  configure.ac  cputemp.c  cputemp.h  loop.sh
.github/workflows/: build.yml
