AC_INIT([cputemp], [1.0.0])
AC_PREREQ([2.59c])
AC_CANONICAL_SYSTEM
AC_CONFIG_SRCDIR([cputemp.c])
AC_CONFIG_HEADERS([cputemp-config.h])
AC_CONFIG_MACRO_DIR([m4])
AM_INIT_AUTOMAKE([foreign subdir-objects])
AC_PROG_CC_C99
AC_PROG_GCC_TRADITIONAL
AM_PROG_CC_C_O
AM_PROG_AS
AC_PROG_RANLIB
AC_PROG_CXX
AC_HEADER_STDC
AC_CONFIG_FILES([Makefile])
AC_OUTPUT
